<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgapp"
    tools:context=".EasyQuestions">

    <!--    <TextView-->
    <!--        android:id="@+id/score"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/txt_view"-->
    <!--        android:textSize="30sp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <TableLayout
        android:id="@+id/tblLayout"
        android:layout_width="414dp"
        android:layout_height="368dp"
        android:layout_marginTop="244dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="400dp">

            <Button
                android:id="@+id/btn_answer1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="200dp"
                android:layout_height="175dp"
                android:background="#5AC18E"
                android:text="@string/btn_answer"
                android:textColor="#FFF"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="45dp"
                tools:layout_editor_absoluteY="162dp" />

            <Button
                android:id="@+id/btn_answer2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="212dp"
                android:layout_height="175dp"
                android:background="#4CA3DD"
                android:text="@string/btn_answer"
                android:textColor="#FFF"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="126dp"
                tools:layout_editor_absoluteY="120dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="400dp">

            <Button
                android:id="@+id/btn_answer3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="202dp"
                android:layout_height="match_parent"
                android:background="#4CA3DD"
                android:text="@string/btn_answer"
                android:textColor="#FFF"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="45dp"
                tools:layout_editor_absoluteY="162dp" />

            <Button
                android:id="@+id/btn_answer4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="210dp"
                android:layout_height="194dp"
                android:background="#5AC18E"
                android:text="@string/btn_answer"
                android:textColor="#FFF"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="126dp"
                tools:layout_editor_absoluteY="120dp" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/txt_view"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tblLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.917" />

    <TextView
        android:id="@+id/tv_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginBottom="56dp"
        android:text="@string/timer_start"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58000004" />

    <Button
        android:id="@+id/countdown_button"
        android:layout_width="100dp"
        android:layout_height="51dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="92dp"
        android:layout_marginBottom="10dp"
        android:text="@string/timer_btn"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_timer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!--    <Button-->
<!--        android:id="@+id/reset_button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/timer_reset"-->
<!--        android:textSize="18sp"-->
<!--        android:visibility="invisible"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/question"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.48"-->
<!--        app:layout_constraintStart_toEndOf="@+id/tv_timer"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/countdown_button"-->
<!--        app:layout_constraintVertical_bias="0.374"-->
<!--        tools:visibility="visible" />-->

</androidx.constraintlayout.widget.ConstraintLayout>